--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -129,6 +129,10 @@
     input[type="file"] {
       display: none;
     }
+
+    &.error {
+      border: 2px solid $error-color;
+    }
   }
 
   &__file-button {
@@ -140,6 +144,11 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+
+    &.error {
+      border: none;
+      border-right: 2px solid $error-color;
+    }
   }
 
   &__file-name {
@@ -151,6 +160,11 @@
     margin-top: 50px;
     text-align: center;
   }
+
+  &__success-image {
+    width: 100%;
+    margin-top: 50px;
+  }
 }
 
 .registration-form__input:-webkit-autofill {
@@ -158,40 +172,3 @@
   -webkit-text-fill-color: $text-color !important;
 }
 
-
-
-// .registration-form__label {
-  // position: absolute;
-  // left: 12px;
-  // top: 16px;
-  // color: #888;
-  // font-size: 16px;
-  // pointer-events: none;
-  // background: white;
-  // padding: 0 4px;
-  // transition: 0.2s ease all;
-// }
-
-// .registration-form__input:focus + .registration-form__label,
-// .registration-form__input:not(:placeholder-shown) + .registration-form__label {
-//   top: 6px;
-//   font-size: 12px;
-//   color: #333;
-// }
-// &__input-container {
-//   display: flex;
-//   flex-direction: column;
-//   gap: 50px;
-//   width: 100%;
-
-//   &--input {
-//     width: 100%;
-//     height: 54px;
-//     box-sizing: border-box;
-//     border: 1px solid #D0CFCF;
-//     background-color: $background-color;
-//     border-radius: 4px;
-//     padding: 14px 16px;
-//     font-family: $font-main;
-//     font-size: $font-size-main;
-//   }
