--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 @import '../../styles/variables.scss';
 
 .header {
-  // position: sticky;
+  position: sticky;
   top: 0;
   z-index: 10;
   background-color: $highlighted-color;
